# wgpu-calc

./: Cargo.toml  README.md
shaders/: mat2calcs.pwgsl  mat2calcs.wgsl
src/: algorithm.rs  coding.rs  errors.rs  interface.rs  lib.rs  solver.rs  translator.rs  variable.rs
src/tests/: mod.rs
tests/: algorithm_tests.rs
tests/shaders/: example_shader.wgsl  mat2calcs.pwgsl  mat2calcs.wgsl
