[package]
name = "wgpu-calc"
version = "0.1.0"
edition = "2021"
authors = ["Pietro Pinucci <pietro.pinucci@gmail.com>"]
description = "Entry point for using GPU compute capabilities"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wgpu = "0.18"
bytemuck = { version = "1.12", features = [ "derive" ] } 
futures-intrusive = "^0.5.0"
thiserror = "^1.0.48"
anyhow ="^1.0.74"
tokio = {version = "1.33.0", features = ["full"]}
futures-channel = "0.3.28"

## This is to build for wasm: browser integration. Not much will be done apart this
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.18", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[dev-dependencies]
pollster = "0.3" 
ndarray = "0.15.6"
